--- a/Frontend/PaginaFrontal/html/Checkout.html
+++ b/Frontend/PaginaFrontal/html/Checkout.html
@@ -11,10 +11,70 @@
 <header class="header-container">
   <div class="header-left">
     <div class="logo-container">
-      <a href="HomePage.html">
-        <img src="/Frontend/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
+      <a href="HomePage.html" class="logo-link">
+        <img src="/Frontend/lib/images/Logo.svg" alt="XYZ Labs Logo" class="logo">
       </a>
     </div>
+
+    <!-- Menu Hamburger (Mobile) -->
+    <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+
+    <!-- Navegação -->
+    <nav class="header-nav" id="headerNav">
+      <ul>
+        <li><a href="HomePage.html" class="active">Home</a></li>
+        <li><a href="products.html">Produtos</a></li>
+        <li><a href="materials.html">Materiais</a></li>
+        <li><a href="colors.html">Cores</a></li>
+        <li><a href="about.html">Sobre</a></li>
+        <li><a href="contact.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </div>
+
+  <div class="header-right">
+    <!-- Search Bar -->
+  <div class="header-search">
+  <span class="search-icon" id="searchBtn">
+    <img src="/Frontend/lib/icons/search-svgrepo-com.svg" alt="pesquisar">
+  </span>
+  <input
+    type="text"
+    placeholder="Pesquisar produtos..."
+    id="searchInput"
+  >
+</div>
+
+
+    <!-- Botões quando não logado -->
+    <div id="authButtons">
+      <button id="signInBtn" class="btn-secondary">Sign In</button>
+      
+      <button id="signUpBtn" class="btn-primary">Sign Up</button>
+    </div>
+
+    <!-- Ícones quando logado -->
+    <div id="userIcons" style="display:none; position: relative;">
+  <button id="userMenuBtn" class="icon-btn" aria-label="Menu utilizador">
+    <img src="/Frontend/lib/icons/user-alt-1-svgrepo-com.svg" alt="Utilizador">
+  </button>
+
+  <!-- 🔽 DROPDOWN USER -->
+  <div id="userDropdown" class="user-dropdown hidden">
+    <p class="dropdown-title" id="dropdownUserName"></p>
+    <ul id="dropdownLinks"></ul>
+  </div>
+
+  <button id="cartBtn" class="icon-btn cart-btn" aria-label="Carrinho">
+    <img src="/Frontend/lib/icons/cart-shopping-fast-svgrepo-com.svg" alt="Carrinho">
+    <span class="cart-badge" id="cartBadge">0</span>
+  </button>
+</div>
+
   </div>
 </header>
 
