finalizaçao estilagem paginas

--- a/Frontend/PaginaFrontal/html copy/materials.html
+++ b/Frontend/PaginaFrontal/html copy/materials.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Materiais - XYZ Labs</title>
-   <link rel="stylesheet" href="../css/base.css">
-   <link rel="stylesheet" href="../css/Header.css">
-   <link rel="stylesheet" href="../css/materials.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/Header.css">
 </head>
 <body>
 
