--- a/Frontend/PaginaFrontal/html copy/product-details.html
+++ b/Frontend/PaginaFrontal/html copy/product-details.html
@@ -8,9 +8,9 @@
   <!-- Google Model Viewer -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   
-   <link rel="stylesheet" href="../css/base.css">
-   <link rel="stylesheet" href="../css/Header.css">
-   <link rel="stylesheet" href="../css/product-details.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/product-details.css">
+  <link rel="stylesheet" href="../css/Header.css">
 </head>
 <body>
 
