--- a/Frontend/PaginaFrontal/html/Checkout.html
+++ b/Frontend/PaginaFrontal/html/Checkout.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fazer Encomenda - XYZ Labs</title>
-  <link rel="stylesheet" href="../css/main.css">
+     <link rel="stylesheet" href="../css/base.css">
+   <link rel="stylesheet" href="../css/Header.css">
+   <link rel="stylesheet" href="../css/Checkout.css">
 </head>
 <body>
 
