--- a/Frontend/PaginaFrontal/html/products.html
+++ b/Frontend/PaginaFrontal/html/products.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Produtos - XYZ Labs</title>
-  <link rel="stylesheet" href="../css/Products.css">
-  <link rel="stylesheet" href="../css/Header.css">
+   <link rel="stylesheet" href="../css/base.css">
+   <link rel="stylesheet" href="../css/Header.css">
+   <link rel="stylesheet" href="../css/products.css">
 </head>
 <body>
 
