--- a/Frontend/PaginaFrontal/html/materials.html
+++ b/Frontend/PaginaFrontal/html/materials.html
@@ -29,9 +29,9 @@
     <!-- Navegação -->
     <nav class="header-nav" id="headerNav">
       <ul>
-        <li><a href="HomePage.html" class="active">Home</a></li>
+        <li><a href="HomePage.html" >Home</a></li>
         <li><a href="products.html">Produtos</a></li>
-        <li><a href="materials.html">Materiais</a></li>
+        <li><a href="materials.html" class="active">Materiais</a></li>
         <li><a href="colors.html">Cores</a></li>
         <li><a href="about.html">Sobre</a></li>
         <li><a href="contact.html">Contacto</a></li>
