--- a/Frontend/PaginaFrontal/html/product-details.html
+++ b/Frontend/PaginaFrontal/html/product-details.html
@@ -33,8 +33,8 @@
     <!-- Navegação -->
     <nav class="header-nav" id="headerNav">
       <ul>
-        <li><a href="HomePage.html" class="active">Home</a></li>
-        <li><a href="products.html">Produtos</a></li>
+        <li><a href="HomePage.html" >Home</a></li>
+        <li><a href="products.html" class="active">Produtos</a></li>
         <li><a href="materials.html">Materiais</a></li>
         <li><a href="colors.html">Cores</a></li>
         <li><a href="about.html">Sobre</a></li>
