--- a/Frontend/PaginaFrontal/html/colors.html
+++ b/Frontend/PaginaFrontal/html/colors.html
@@ -98,7 +98,7 @@
 <!-- CONTEÚDO PRINCIPAL -->
 <main class="colors-page">
   <div class="container">
-    
+
     <section class="page-hero">
       <h1>🎨 Paleta de Cores</h1>
       <p>Escolha entre mais de 50 cores vibrantes para personalizar o seu projeto</p>
@@ -111,10 +111,6 @@
           <label>Material:</label>
           <select id="materialFilter" class="filter-select">
             <option value="all">Todos os Materiais</option>
-            <option value="pla">PLA</option>
-            <option value="abs">ABS</option>
-            <option value="petg">PETG</option>
-            <option value="tpu">TPU</option>
           </select>
         </div>
 
@@ -142,321 +138,8 @@
       </div>
     </div>
 
-    <!-- Grid de Cores -->
-    <div class="colors-grid" id="colorsGrid">
-      
-      <!-- Cores Básicas PLA -->
-      <div class="color-card" data-material="pla" data-finish="matte" data-category="basic">
-        <div class="color-sample" style="background: #FFFFFF;">
-          <div class="color-overlay"></div>
-        </div>
-        <div class="color-info">
-          <h3>Branco</h3>
-          <div class="color-details">
-            <span class="color-code">#FFFFFF</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Mate</span>
-            <span class="tag">Básica</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="matte" data-category="basic">
-        <div class="color-sample" style="background: #000000;"></div>
-        <div class="color-info">
-          <h3>Preto</h3>
-          <div class="color-details">
-            <span class="color-code">#000000</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Mate</span>
-            <span class="tag">Básica</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="matte" data-category="basic">
-        <div class="color-sample" style="background: #808080;"></div>
-        <div class="color-info">
-          <h3>Cinzento</h3>
-          <div class="color-details">
-            <span class="color-code">#808080</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Mate</span>
-            <span class="tag">Básica</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <!-- Cores Vibrantes -->
-      <div class="color-card" data-material="pla" data-finish="glossy" data-category="vibrant">
-        <div class="color-sample" style="background: #FF0000;"></div>
-        <div class="color-info">
-          <h3>Vermelho Ferrari</h3>
-          <div class="color-details">
-            <span class="color-code">#FF0000</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Brilhante</span>
-            <span class="tag">Vibrante</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="glossy" data-category="vibrant">
-        <div class="color-sample" style="background: #0000FF;"></div>
-        <div class="color-info">
-          <h3>Azul Royal</h3>
-          <div class="color-details">
-            <span class="color-code">#0000FF</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Brilhante</span>
-            <span class="tag">Vibrante</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="glossy" data-category="vibrant">
-        <div class="color-sample" style="background: #00FF00;"></div>
-        <div class="color-info">
-          <h3>Verde Neon</h3>
-          <div class="color-details">
-            <span class="color-code">#00FF00</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Brilhante</span>
-            <span class="tag">Vibrante</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="glossy" data-category="vibrant">
-        <div class="color-sample" style="background: #FFFF00;"></div>
-        <div class="color-info">
-          <h3>Amarelo Limão</h3>
-          <div class="color-details">
-            <span class="color-code">#FFFF00</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Brilhante</span>
-            <span class="tag">Vibrante</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="glossy" data-category="vibrant">
-        <div class="color-sample" style="background: #FF00FF;"></div>
-        <div class="color-info">
-          <h3>Magenta</h3>
-          <div class="color-details">
-            <span class="color-code">#FF00FF</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Brilhante</span>
-            <span class="tag">Vibrante</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="glossy" data-category="vibrant">
-        <div class="color-sample" style="background: #FFA500;"></div>
-        <div class="color-info">
-          <h3>Laranja</h3>
-          <div class="color-details">
-            <span class="color-code">#FFA500</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Brilhante</span>
-            <span class="tag">Vibrante</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <!-- Cores Pastel -->
-      <div class="color-card" data-material="pla" data-finish="matte" data-category="pastel">
-        <div class="color-sample" style="background: #FFB6C1;"></div>
-        <div class="color-info">
-          <h3>Rosa Pastel</h3>
-          <div class="color-details">
-            <span class="color-code">#FFB6C1</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Mate</span>
-            <span class="tag">Pastel</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="matte" data-category="pastel">
-        <div class="color-sample" style="background: #ADD8E6;"></div>
-        <div class="color-info">
-          <h3>Azul Bebé</h3>
-          <div class="color-details">
-            <span class="color-code">#ADD8E6</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Mate</span>
-            <span class="tag">Pastel</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="matte" data-category="pastel">
-        <div class="color-sample" style="background: #98FB98;"></div>
-        <div class="color-info">
-          <h3>Verde Menta</h3>
-          <div class="color-details">
-            <span class="color-code">#98FB98</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Mate</span>
-            <span class="tag">Pastel</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="matte" data-category="pastel">
-        <div class="color-sample" style="background: #FFFFE0;"></div>
-        <div class="color-info">
-          <h3>Amarelo Pastel</h3>
-          <div class="color-details">
-            <span class="color-code">#FFFFE0</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Mate</span>
-            <span class="tag">Pastel</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <!-- Cores Translúcidas -->
-      <div class="color-card" data-material="petg" data-finish="transparent" data-category="special">
-        <div class="color-sample" style="background: rgba(255,0,0,0.5);"></div>
-        <div class="color-info">
-          <h3>Vermelho Translúcido</h3>
-          <div class="color-details">
-            <span class="color-code">rgba(255,0,0,0.5)</span>
-            <span class="color-material">PETG</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Translúcido</span>
-            <span class="tag">Especial</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="petg" data-finish="transparent" data-category="special">
-        <div class="color-sample" style="background: rgba(0,0,255,0.5);"></div>
-        <div class="color-info">
-          <h3>Azul Translúcido</h3>
-          <div class="color-details">
-            <span class="color-code">rgba(0,0,255,0.5)</span>
-            <span class="color-material">PETG</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Translúcido</span>
-            <span class="tag">Especial</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="petg" data-finish="transparent" data-category="special">
-        <div class="color-sample" style="background: rgba(0,255,0,0.5);"></div>
-        <div class="color-info">
-          <h3>Verde Translúcido</h3>
-          <div class="color-details">
-            <span class="color-code">rgba(0,255,0,0.5)</span>
-            <span class="color-material">PETG</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Translúcido</span>
-            <span class="tag">Especial</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <!-- Cores Metálicas -->
-      <div class="color-card" data-material="pla" data-finish="metallic" data-category="special">
-        <div class="color-sample" style="background: linear-gradient(135deg, #C0C0C0, #E8E8E8);"></div>
-        <div class="color-info">
-          <h3>Prateado Metálico</h3>
-          <div class="color-details">
-            <span class="color-code">#C0C0C0</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Metálico</span>
-            <span class="tag">Especial</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="metallic" data-category="special">
-        <div class="color-sample" style="background: linear-gradient(135deg, #FFD700, #FFED4E);"></div>
-        <div class="color-info">
-          <h3>Dourado</h3>
-          <div class="color-details">
-            <span class="color-code">#FFD700</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Metálico</span>
-            <span class="tag">Especial</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-      <div class="color-card" data-material="pla" data-finish="metallic" data-category="special">
-        <div class="color-sample" style="background: linear-gradient(135deg, #B87333, #CD7F32);"></div>
-        <div class="color-info">
-          <h3>Bronze</h3>
-          <div class="color-details">
-            <span class="color-code">#B87333</span>
-            <span class="color-material">PLA</span>
-          </div>
-          <div class="color-tags">
-            <span class="tag">Metálico</span>
-            <span class="tag">Especial</span>
-          </div>
-          <button class="btn-select-color">Escolher</button>
-        </div>
-      </div>
-
-    </div>
+    <!-- Grid de Cores (vazia, será preenchida via JS) -->
+    <div class="colors-grid" id="colorsGrid"></div>
 
     <!-- Info Section -->
     <section class="color-info-section">
