--- a/Frontend/PaginaFrontal/html/colors.html
+++ b/Frontend/PaginaFrontal/html/colors.html
@@ -100,7 +100,7 @@
   <div class="container">
 
     <section class="page-hero">
-      <h1>🎨 Paleta de Cores</h1>
+      <h1>Paleta de Cores</h1>
       <p>Escolha entre mais de 50 cores vibrantes para personalizar o seu projeto</p>
     </section>
 
