--- a/Frontend/PaginaFrontal/html/materials.html
+++ b/Frontend/PaginaFrontal/html/materials.html
@@ -100,7 +100,7 @@
   <div class="container">
     
     <section class="page-hero">
-      <h1>🧱 Materiais de Impressão 3D</h1>
+      <h1>Materiais de Impressão 3D</h1>
       <p>Descubra a nossa vasta gama de materiais premium para dar vida aos seus projetos</p>
     </section>
 
@@ -122,7 +122,7 @@
 
     <!-- Comparação -->
     <section class="comparison-section">
-      <h2>📊 Comparação de Materiais</h2>
+      <h2>Comparação de Materiais</h2>
       <div class="comparison-table-wrapper">
         <table class="comparison-table">
           <thead>
