--- a/Frontend/PaginaFrontal/html/contact.html
+++ b/Frontend/PaginaFrontal/html/contact.html
@@ -123,7 +123,7 @@
           <div class="contact-icon">📱</div>
           <div class="contact-details">
             <h3>Telefone</h3>
-            <a href="tel:+351912345678">+351 912 345 678</a>
+            <a href="tel:+351935310984">+351 935 310 984</a>
             <p>Seg-Sex: 9h00 - 18h00</p>
           </div>
         </div>
@@ -132,8 +132,8 @@
           <div class="contact-icon">📍</div>
           <div class="contact-details">
             <h3>Morada</h3>
-            <p>Rua da Inovação, 123<br>
-            4000-000 Porto, Portugal</p>
+            <p>Rua Dos Pinheiros, 64<br>
+            4430-494 Porto, Portugal</p>
           </div>
         </div>
 
@@ -239,7 +239,7 @@
       <h2>📍 Encontre-nos</h2>
       <div class="map-container">
         <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3004.356449662302!2d-8.629105884614434!3d41.15764597928822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2464e25e5b3f85%3A0x8c8c4c7e1e8c8c8c!2sPorto%2C%20Portugal!5e0!3m2!1spt-PT!2spt!4v1234567890123!5m2!1spt-PT!2spt" 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3158.694335165743!2d-8.580398023944994!3d41.111737113047894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd247b50aaf5315b%3A0xfc2485bce2cc3d63!2sR.%20Pinheiros%2064%2C%204430-494%20Vila%20Nova%20de%20Gaia!5e1!3m2!1spt-PT!2spt!4v1769685283860!5m2!1spt-PT!2spt" 
           width="100%" 
           height="400" 
           style="border:0;" 
