adiçao de filtros nos produtos da dashboard

--- a/Frontend/Dashboard/html/dashboard.html
+++ b/Frontend/Dashboard/html/dashboard.html
@@ -245,6 +245,26 @@
       <option value="true">Ativos</option>
       <option value="false">Inativos</option>
     </select>
+    <input type="number" id="priceMin" placeholder="Preço min €" />
+<input type="number" id="priceMax" placeholder="Preço max €" />
+
+<select id="productFilterStock">
+  <option value="">Stock (todos)</option>
+  <option value="true">Com stock</option>
+  <option value="false">Sem stock</option>
+</select>
+
+<input
+  type="text"
+  id="productFilterCategory"
+  placeholder="Categoria..."
+/>
+
+<input
+  type="text"
+  id="productFilterPrimaryCategory"
+  placeholder="Categoria principal..."
+/>
 
     <button id="addProductBtn" class="primary-btn">
       + Novo Produto
