--- a/Frontend/PaginaFrontal/html/products.html
+++ b/Frontend/PaginaFrontal/html/products.html
@@ -84,6 +84,8 @@
       <div class="filter-section">
         <div class="filter-section-header">
           <h3>Categorias</h3>
+        </div>
+         <div class="filter-section-header">
           <button class="btn-clear" id="clearCategories">Limpar</button>
         </div>
         <div id="categoryFilters" class="filter-list">
