ajustes pagina checkout e formataçao de email nodemailer

--- a/Frontend/PaginaFrontal/html/HomePage.html
+++ b/Frontend/PaginaFrontal/html/HomePage.html
@@ -120,12 +120,12 @@
 </section>
 
 
-<!-- PRODUTOS EM DESTAQUE -->
+<!-- PRODUTOS EM DESTAQUE - CAROUSEL INFINITO -->
 <section class="featured-products">
   <div class="container">
     <h2>Produtos em Destaque</h2>
-    <div class="products-grid" id="featuredProducts">
-      <!-- Produtos carregados via JavaScript -->
+    <!-- O carousel será injetado aqui via JavaScript -->
+    <div id="featuredProducts">
       <div class="loading">A carregar produtos...</div>
     </div>
     <div class="view-all-container">
@@ -464,5 +464,6 @@
 <script src="../scripts/homePage.js"></script>
 <script src="../scripts/homepage-products.js"></script>
 <script src="../scripts/categories-slider.js"></script>
+<script src="../scripts/homePage-responsive.js"></script>
 </body>
 </html>
