--- a/Frontend/PaginaFrontal/html/Checkout copy.html
+++ b/Frontend/PaginaFrontal/html/Checkout copy.html
@@ -155,9 +155,20 @@
     <option value="">-- Selecionar país --</option>
   </select>
 </div>
+
+
+  <label for="materialSelect">Material *</label>
+  <select id="materialSelect" required>
+    <option value="">-- Escolher material --</option>
+  </select>
 </div>
 
-
+<div class="form-group">
+  <label for="colorSelect">Cor *</label>
+  <select id="colorSelect" required>
+    <option value="">-- Escolher cor --</option>
+  </select>
+</div>
 
           <div class="form-group">
             <label for="orderNotes">Notas do Pedido (opcional)</label>
@@ -190,6 +201,8 @@
             
             <strong id="orderSubtotal">€0.00</strong>
           </div>
+          <p><strong>Material:</strong> <span id="summaryMaterial"></span></p>
+          <p><strong>Cor:</strong> <span id="summaryColor"></span></p>
           <div class="total-row total-final">
             <span>Total Estimado:</span>
             <strong id="orderTotal">€0.00</strong>
